2009-10-21  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Another round of cleanup of DMP database schema.

2009-10-21  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	Remove obsolete constructs from db access rights computations.

2009-10-20  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	* lib/pytis/presentation/spec.py:
	* tools/genmenu.py:
	Distinguish edited and current access rights.

2009-10-19  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	* defs/menu.py:
	* doc/tutorials/DmpDb:
	* lib/pytis/form/application.py:
	* lib/pytis/presentation/spec.py:
	* tools/genmenu.py:
	Don't store computed rights, always compute them.

2009-10-26  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	Make pytis.data.dbtable usable also for table functions.

2009-10-26  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/extensions/defs.py:
	get_menu_defs: Get defs from DMP if available.

2009-10-26  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	* lib/pytis/data/postgresql.py:
	* lib/pytis/form/application.py:
	* lib/pytis/presentation/spec.py:
	Replace add_spec calls and definitions by new function dbtable.

2009-10-23  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Prevent assigning broken menu positions in e_pytis_menu db table.

2009-10-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	* lib/pytis/form/list.py:
	Use InputNumeric in JUMP and FOLDING_LEVEL commands.

2009-10-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/dialog.py:
	Prevent InputNumeric crash with certain locales.

2009-10-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Add Alt-dclick folding action to CodebookForm.

2009-10-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/commands_.py:
	* lib/pytis/form/list.py:
	New command FOLDING_LEVEL.

2009-10-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/output/formatter.py: